syntax = "proto3";
package mtikvpb;

option java_multiple_files = true;
option java_package = "mtikv";

enum Op {
    DEL = 0;
    PUT = 1;
    RBACK = 2;
}

enum MvccOp {
    NULL = 0;
    PRWITE = 1;
    COMMIT = 2;
}

message MvccObject {
    bytes key = 1;
    uint64 start_ts = 2;
    uint64 commit_ts = 3;
    bytes value = 4;
    Op op = 5;
    int32 cf = 6;
    bytes primary_key = 7;
    uint64 latest_commit = 8;
    MvccOp mvcc_op = 9;
}

enum Error {
    Ok             = 0;
    RegionNotFound = 1;
    KeyNotInRegion = 2;
}

enum KeyError {
    WriteConflict = 0;
    KeyIsLocked = 1;
}

message Context {
    string cluster_id = 1;
}


message KeyValue {
    bytes key = 1;
    bytes value = 2;
}

message PrewriteRequest {
    Context context = 1;
    repeated MvccObject mutation = 2; // {Key, Value, Op}
    bytes primary_lock = 3;
    uint64 start_version = 4;
}

message PrewriteResponse {
    Error region_error = 1;
    repeated KeyError errors = 2;
}

message CommitRequest {
    Context context = 1;
    repeated MvccObject keys = 2; // {Key}
    uint64 start_version  = 3;
    uint64 commit_version = 4;
}

message CommitResponse {
    Error region_error = 1;
    repeated KeyError errors = 2;
}

message GetRequest {
    Context context = 1;
    bytes key = 2; 
    uint64 version = 3;
}

message GetResponse {
    Error region_error = 1;
    KeyError error = 2;
    bytes value = 3;
    bool not_found = 4;
}

message ResolveLockRequest {
    uint64 start_version = 1;
    uint64 commit_version = 2;
    repeated bytes keys = 3;
}

message ResolveLockResponse {
    Error region_error = 1;
    KeyError error = 2;
}

message GCRequest {
    uint64 safe_point = 1;
}

message GCResponse {
    Error region_error = 1;
    KeyError error = 2;
}

message RawGetRequest {
    bytes key = 1;
    string cf = 2;
}

message RawGetResponse {
    bytes   value = 1;
    bool    not_found = 2;
    Error  region_error = 3;
    KeyError  error = 4;
}

message RawPutRequest {
    bytes key = 1;
    bytes value = 2;
    string cf = 3;
}

message RawPutResponse {
    Error region_error = 1;
    KeyError error = 2;
}

message RawDeleteRequest {
    bytes key = 1;
    string cf = 2;
}

message RawDeleteResponse {
    Error region_error  = 1;
    KeyError error = 2;
}


service MTikv{
    
    rpc  Prewrite(PrewriteRequest) returns (PrewriteResponse){}
    rpc  Commit(CommitRequest) returns (CommitResponse){}
    rpc  Get(GetRequest) returns (GetResponse){}
    rpc  ResolveLock(ResolveLockRequest) returns (ResolveLockResponse){}
    rpc  GC (GCRequest) returns (GetResponse){}

    rpc  RawGet(RawGetRequest) returns (RawGetResponse){}
    rpc  RawPut(RawPutRequest) returns (RawPutResponse){}
    rpc  RawDelete(RawDeleteRequest) returns (RawDeleteResponse){}
}
